--- a/tire2-1921.html
+++ b/tire2-1921.html
@@ -281,7 +281,74 @@
             </div>
 
           </div>
-          <div class="Real__usages">
+
+          <div class="sliderWithRealUsages">
+            <h2>Real usages</h2>
+            <div class="sliderUseges">
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+              <div class="usegesItem">
+                <div class="usegesItem__img">
+                  <img class="usage__img" src="img/imageVideo.jpg" alt="">
+                </div>
+                <h3>Transforming the fotd</h3>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="Real__usages">
             <h2 class="Real__usages__title">
               Real usages
             </h2>
@@ -319,7 +386,8 @@
                 <h3>Transforming the fotd</h3>
               </div>
             </div>
-          </div>
+          </div> -->
+
           <!-- <div class="rewiews">
             <div class="rewiews__title">
               <p class="rewiews__title-title">PRODUCT REVIEWS <span class="amouthReviews">(22)</span></p>
