--- a/tire2-1921.html
+++ b/tire2-1921.html
@@ -289,61 +289,61 @@
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
               <div class="usegesItem">
                 <div class="usegesItem__img">
                   <img class="usage__img" src="img/imageVideo.jpg" alt="">
                 </div>
-                <a href="#">Transforming the fotd</a>
+                <a href="#">Transforming the ford</a>
               </div>
             </div>
           </div>
